[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "STDIN/STDOUT server for JSON-RPC"
documentation = "https://docs.rs/jsonrpc-stdio-server/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
license = "MIT"
name = "jsonrpc-stdio-server"
repository = "https://github.com/paritytech/jsonrpc"
version = "14.0.1"

[dependencies]
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
jsonrpc-core = { version = "14.0", path = "../core" }
log = "0.4"
tokio = "0.2.0-alpha.6"

[dev-dependencies]
lazy_static = "1.0"
env_logger = "0.6"

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}
